<?xml version="1.0"?>
<package format="2">
  <name>chusa_teleop</name>
  <version>0.0.0</version>
  <description>The chusa_teleop package</description>
  <maintainer email="jaeho@todo.todo">jaeho</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
