<?xml version="1.0"?>
<package format="2">
  <name>chusa_bot</name>
  <version>0.1.0</version>
  <description>The chusa_bot package</description>

  <maintainer email="theorose49@gmail.com">Jaeho Choi</maintainer>
  <maintainer email="erichu92@gmail.com">Moonhyuk Hur</maintainer>

  <license>TODO</license>

  <author email="theorose49@gmail.com">Jaeho Choi</author>
  <author email="erichu92@gmail.com">Moonhyuk Hur</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>chusa_msgs</build_depend>
  <build_depend>rplidar_ros</build_depend>
  <build_depend>robot_base</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>chusa_msgs</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>robot_base</exec_depend>

  <export>

  </export>
</package>
